--- a/coffee-house/style/media.css
+++ b/coffee-house/style/media.css
@@ -114,12 +114,14 @@
     flex-wrap: wrap;
   }
 }
-@media screen and (max-width: 835px) {
-  .favorite-coffee .slider__btn-left {
-    left: 0px;
+@media screen and (max-width: 1024px) {
+  .about .grid {
+    grid-template-areas: "a" "d";
+    grid-template-columns: minmax(auto, 688px);
+    justify-content: center;
   }
-  .favorite-coffee .slider__btn-right {
-    right: 0px;
+  .about .grid-item-2, .about .grid-item-3 {
+    display: none;
   }
   .about .grid-item__pic {
     transform: translate(-50%, -50%) scale(1.055);
@@ -127,10 +129,15 @@
     height: 688px;
   }
 }
-@media screen and (max-width: 817px) {
-  .enjoy-desc {
-    margin-left: 60px;
+@media screen and (max-width: 835px) {
+  .favorite-coffee .slider__btn-left {
+    left: 0px;
   }
+  .favorite-coffee .slider__btn-right {
+    right: 0px;
+  }
+}
+@media screen and (max-width: 817px) {
   .enjoy-desc__btn {
     padding: 20px 93px 20px 64px;
     transform: translateX(0px);
@@ -144,7 +151,6 @@
     top: 22px;
   }
   .footerbox {
-    padding-left: 60px;
     padding-bottom: 84px;
   }
   .footerbox-desc {
@@ -166,29 +172,22 @@
   .nav--mobile .nav__btn-menu:hover::after {
     opacity: 0;
   }
-  .about .grid {
-    grid-template-areas: "a" "d";
-    grid-template-columns: 1fr;
-  }
-  .about .grid-item-2, .about .grid-item-3 {
-    display: none;
-  }
 }
 @media screen and (max-width: 767px) {
   .wrapper {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: clamp(16px, 3.5vw, 40px);
+    padding-right: clamp(16px, 3.5vw, 40px);
   }
   .enjoy {
-    padding: 60px 0;
+    padding: clamp(60px, 7.5vw, 100px) 0;
     box-sizing: content-box;
     padding-right: 7px;
   }
   .enjoy-desc {
-    margin-left: 15px;
+    margin-left: clamp(15px, 3.5vw, 60px);
   }
   .enjoy-desc__title {
-    font-size: 42px;
+    font-size: clamp(42px, 10vw, 72px);
     line-height: 1.15;
   }
   .enjoy-desc__text {
@@ -198,21 +197,21 @@
     transform: translateX(1px);
   }
   .favorite-coffee__title {
-    font-size: 32px;
+    font-size: clamp(32px, 8vw, 60px);
   }
   .favorite-coffee .slider-box .slider__btn-left,
   .favorite-coffee .slider-box .slider__btn-right {
     display: none;
   }
   .favorite-coffee .slider-item__pic {
-    width: 348px;
-    height: 348px;
+    width: clamp(348px, 63vw, 480px);
+    height: clamp(348px, 63vw, 480px);
   }
   .about__title {
-    font-size: 32px;
+    font-size: clamp(32px, 8vw, 60px);
   }
   .mobile-app .download__title {
-    font-size: 32px;
+    font-size: clamp(32px, 8vw, 60px);
   }
   .mobile-app__img {
     flex-basis: 468px;
@@ -220,13 +219,16 @@
     height: 468px;
   }
   .menu-desc__title {
-    font-size: 32px;
+    font-size: clamp(32px, 8vw, 60px);
   }
   .menu .grid-coffee, .menu .grid-tea, .menu .grid-dessert {
     grid-template-areas: "a" "b" "c" "d";
   }
+  .footerbox {
+    padding-left: clamp(16px, 4vw, 60px);
+  }
   .footerbox-desc__title {
-    font-size: 32px;
+    font-size: clamp(32px, 7vw, 60px);
   }
 }
 @media screen and (max-width: 565px) {
@@ -243,10 +245,29 @@
     height: 348px;
   }
   .footerbox {
-    padding: 60px 16px 44px;
+    padding-top: 60px;
+    padding-right: 16px;
+    padding-bottom: 44px;
   }
   .footerbox-desc {
     margin-bottom: 2px;
+  }
+}
+@media screen and (max-width: 379px) {
+  .favorite-coffee .slider-item__pic {
+    width: calc(100vw - 32px);
+    height: calc(100vw - 32px);
+  }
+  .mobile-app__img {
+    flex-basis: auto;
+    width: calc(100vw - 32px);
+    height: calc(100vw - 32px);
+  }
+  .menu-tab {
+    flex-direction: column;
+  }
+  .menu .grid-coffee-item, .menu .grid-tea-item, .menu .grid-dessert-item {
+    width: calc(100vw - 34px);
   }
 }
 .disable-btn,
