--- a/coffee-house/style/index.scss
+++ b/coffee-house/style/index.scss
@@ -8,7 +8,7 @@
 	border-radius: 40px;
 	&-desc {
 		max-width: 518px;
-		margin-left: 101px;
+		margin-left: clamp(60px, 7.5vw, 101px);
 		&__title {
 			margin-bottom: 41px;
 			font-size: 72px;
@@ -244,7 +244,6 @@
 }
 
 /*Block-pages*/
-.enjoy,
 .favorite-coffee {
 	padding: 100px 0;
 }
@@ -253,6 +252,7 @@
 	background-size: cover;
     background-repeat: no-repeat;
 	background-position: 50% 50%;
+	padding: 100px 0;
 }
 .about,
 .mobile-app {
