--- a/coffee-house/style/menu.css
+++ b/coffee-house/style/menu.css
@@ -172,6 +172,7 @@ img {
   justify-content: flex-start;
   box-sizing: content-box;
   padding: 100px 100px 94px;
+  padding-left: clamp(60px, 7vw, 100px);
   border-radius: 40px;
   background-color: #665F55;
 }
