--- a/coffee-house/style/index.scss
+++ b/coffee-house/style/index.scss
@@ -73,8 +73,8 @@
 			text-align: center;
 			color: $text-dark;
 			&__pic {
-				width: 480px;
-				height: 480px;
+				width: 100%;
+				height: 100%;
 			}
 			&__type {
 				margin: 21px 0 15px;
@@ -164,16 +164,10 @@
 			&-1, 
 			&-4 {
 				height: 590px;
-				&__pic {
-					min-height: 590px;
-				}
 			}
 			&-2, 
 			&-3 {
 				height: 430px;
-				&__pic {
-					min-height: 430px;
-				}
 			}
 			&-1 {grid-area: a;}
 			&-2 {grid-area: b;}
@@ -184,6 +178,7 @@
 				top: 50%;
 				left: 50%;
 				max-width: 100%;
+				height: 100%;
 				transition: transform 0.5s;
 				transform: translate(-50%,-50%) scale(1.1);
 				object-fit: cover;
@@ -238,8 +233,9 @@
 		}
 	}
 	&__img {
-		flex-basis: 630px;
-		height: 630px;
+		max-width: 630px;
+		width: 100%;
+		height: 100%;
 	}
 }
 
