--- a/coffee-house/style/media.scss
+++ b/coffee-house/style/media.scss
@@ -197,12 +197,10 @@
             &-3 {
                 display: none;
             }
+            &__pic {
+                transform: translate(-50%, -50%) scale(1.055);
+            }
         }
-    }
-    .about .grid-item__pic {
-        transform: translate(-50%, -50%) scale(1.055);
-        width: 688px;
-        height: 688px;
     }
 }
 @media screen and (max-width: 835px) {
@@ -283,51 +281,31 @@
             }
         }
     }
-    .favorite-coffee {
-        &__title {
-            font-size: clamp(32px, 8vw, 60px);
-        }
-        .slider-box {
-            .slider__btn-left,
-            .slider__btn-right {
-                display: none;
-            }
-        }
-        .slider-item__pic {
-            width: clamp(348px, 63vw, 480px);
-            height: clamp(348px, 63vw, 480px);
-        }
-    }
-    .about {
+    .favorite-coffee,
+    .about,
+    .mobile-app .download,
+    .menu-desc {
         &__title {
             font-size: clamp(32px, 8vw, 60px);
         }
     }
-    .mobile-app {
-        .download {
-            &__title {
-                font-size: clamp(32px, 8vw, 60px);
-            }
-        }
-        &__img {
-            flex-basis: 468px;
-            width: 468px;
-            height: 468px;
+    .favorite-coffee .slider-box {
+        .slider__btn-left,
+        .slider__btn-right {
+            display: none;
         }
     }
-    .menu {
-        &-desc__title {
-            font-size: clamp(32px, 8vw, 60px);
-        }
-        .grid {
-            &-coffee, 
-            &-tea, 
-            &-dessert {
-                grid-template-areas: "a"
-                                     "b"
-                                     "c"
-                                     "d";
-            }
+    .about .grid-item__pic {
+        transform: translate(-50%, -50%) scale(1.23);
+    }
+    .menu .grid {
+        &-coffee, 
+        &-tea, 
+        &-dessert {
+            grid-template-areas: "a"
+                                 "b"
+                                 "c"
+                                 "d";
         }
     }
     .footerbox {
@@ -338,20 +316,13 @@
     }
 }
 @media screen and (max-width: 565px) {
-    .mobile-app {
-        .download {
-            margin-bottom: 20px;
-            &-market {
-                li {
-                    margin-bottom: 14px;
-                    margin-right: 9px
-                }
+    .mobile-app .download {
+        margin-bottom: 20px;
+        &-market {
+            li {
+                margin-bottom: 14px;
+                margin-right: 9px
             }
-        }
-        &__img {
-            flex-basis: 348px;
-            width: 348px;
-            height: 348px;
         }
     }
     .footerbox {
@@ -364,30 +335,17 @@
     }
 }
 @media screen and (max-width: 379px) {
-    .favorite-coffee {
-        .slider-item__pic {
-            width: calc(100vw - 32px);
-            height: calc(100vw - 32px);
-        }
+    .menu-tab {
+        flex-direction: column;
     }
-    .mobile-app {
-        &__img {
-            flex-basis: auto;
-            width: calc(100vw - 32px);
-            height: calc(100vw - 32px);
-        }
-    }
-    .menu {
-        &-tab {
-            flex-direction: column;
-        }
-        .grid {
-            &-coffee, 
-            &-tea, 
-            &-dessert {
-                &-item {
-                    width: calc(100vw - 34px);
-                }
+}
+@media screen and (max-width: 342px) {
+    .menu .grid {
+        &-coffee, 
+        &-tea, 
+        &-dessert {
+            &-item {
+                width: calc(100% - 2px);
             }
         }
     }
