--- a/coffee-house/style/menu.css
+++ b/coffee-house/style/menu.css
@@ -398,10 +398,11 @@ img {
   position: absolute;
   top: 50%;
   left: 50%;
-  max-width: 100%;
-  min-height: 309px;
+  width: 308px;
+  height: 100%;
   transition: transform 0.5s;
   transform: translate(-50%, -50%) scale(1.1);
+  object-fit: cover;
 }
 .menu .grid-coffee-item__type, .menu .grid-tea-item__type, .menu .grid-dessert-item__type {
   margin: 21px 0px 11px 19px;
