--- a/coffee-house/style/menu.scss
+++ b/coffee-house/style/menu.scss
@@ -129,10 +129,11 @@
                         position: absolute;
                         top: 50%;
                         left: 50%;
-                        max-width: 100%;
-                        min-height: 309px;
+                        width: 308px;
+                        height: 100%;
                         transition: transform 0.5s;
                         transform: translate(-50%,-50%) scale(1.1);
+                        object-fit: cover;
                     }
                 }
                 &__type {
