--- a/coffee-house/style/footer.scss
+++ b/coffee-house/style/footer.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	justify-content: flex-start;
 	box-sizing: content-box;
-	padding: 100px 100px 94px;
+	padding: 100px;
 	padding-left: clamp(60px, 7vw, 100px);
 	border-radius: 40px;
 	background-color: $border-dark;
@@ -28,15 +28,21 @@
 			justify-content: space-between;
 			max-width: 204px;
 			list-style-type: none;
-			&__item svg {
-				fill: transparent;
-				rect {
-					stroke: $border-light;
-					transition: fill 0.5s, stroke 0.5s;
-				}
-				path {
-					stroke: $text-light;
-					transition: stroke 0.5s;
+			&__item {
+				display: inline-block;
+				box-sizing: border-box;
+				width: 60px;
+				height: 60px;
+				padding: 17px;
+				border: 1px solid $text-light;
+				border-radius: 100%;
+				transition: background-color 0.5s;
+				svg {
+					fill: transparent;
+					path {
+						stroke: $text-light;
+						transition: stroke 0.5s;
+					}
 				}
 			}
 		}
