--- a/coffee-house/style/media.scss
+++ b/coffee-house/style/media.scss
@@ -25,26 +25,12 @@
         }
     }
     .favorite-coffee .slider {
-		&-controls__item {
-            &:hover {
-                background-color: $border-dark;
-                cursor: pointer;
-            }
-            &--active {
-                &:hover {
-                    user-select: none;
-                    cursor: default;
-                }
-            }
-		}
         &__btn-left, 
         &__btn-right {
-            svg {
-                &:hover {
-                    fill: $border-dark;
-                    path {
-                        stroke: $text-light;
-                    }
+            &:hover {
+                background-color: $border-dark;
+                svg path {
+                    stroke: $text-light;
                 }
             }
         }
@@ -55,27 +41,27 @@
         }
     }
     .mobile-app .download-market {
-        &__appstore svg, 
-        &__gplay svg {
+        &__appstore,
+        &__gplay {
             &:hover {
-                fill: $border-dark;
-                path {
+                background-color: $border-dark;
+                svg path {
                     fill: $text-light;
+                }
+                .download-market-desc {
+                    color: $text-light;
                 }
             }
         }
     }
     .menu-tab__btn {
-        svg {
-            &:hover {
-                .circle-stroke {
-                    stroke: $border-dark;
-                    fill: $border-dark;
-                }
-                .circle-img,
-                .text {
-                    fill: $text-light;
-                }
+        &:hover {
+            background-color: $border-dark;
+            svg .circle-img {
+                fill: $text-light;
+            }
+            span {
+                color: $text-light;
             }
         }
         &--active {
@@ -97,13 +83,10 @@
         }
     }
     .footerbox {
-        &-desc-social__item svg {
+        &-desc-social__item {
             &:hover {
-                rect {
-                    stroke: $text-light;
-                    fill: $text-light;
-                }
-                path {
+                background-color: $text-light;
+                svg path {
                     stroke: $text-dark;
                 }
             }
@@ -146,7 +129,7 @@
         justify-content: center;
         .download {
             flex-basis: auto;
-            margin-bottom: 94px;
+            margin-bottom: 100px;
             &__title {
                 margin: 100px 0 40px;
             }
@@ -231,7 +214,7 @@
     .footerbox {
         padding-bottom: 84px;
         &-desc {
-            margin-bottom: 62px;
+            margin-bottom: 68px;
         }
     }
 }
@@ -320,7 +303,7 @@
         margin-bottom: 20px;
         &-market {
             li {
-                margin-bottom: 14px;
+                margin-bottom: 20px;
                 margin-right: 9px
             }
         }
@@ -330,13 +313,16 @@
         padding-right: 16px;
         padding-bottom: 44px;
         &-desc {
-            margin-bottom: 2px;
+            margin-bottom: 8px;
         }
     }
 }
 @media screen and (max-width: 379px) {
     .menu-tab {
         flex-direction: column;
+        &__btn {
+            margin-bottom: 10px;
+        }
     }
 }
 @media screen and (max-width: 342px) {
