--- a/coffee-house/style/header.scss
+++ b/coffee-house/style/header.scss
@@ -51,40 +51,45 @@
 			transform: translateX(-4px);
 		}
 	}
-	&-btn-mobile-equal,
-	&-btn-mobile-cross {
+	&-btn-mobile-equal {
 		display: none;
+		box-sizing: border-box;
+		flex-direction: column;
 		width: 44px;
 		height: 44px;
+		padding: 16px 11.6px 16px 12.4px;
 		border: 1px solid $border-dark;
 		border-radius: 100%;
-		transition: background-color 0.5s;
-		svg {
-			fill: transparent;
-			transform: translateY(-1px) scaleX(1.1);
-			transition: fill 0.5s;
-			path {
-				stroke: $text-dark;
-				transition: stroke 0.5s;
-			}
+		&__first,
+		&__second {
+			display: inline-block;
+			width: 18px;
+			height: 2px;
+			border-radius: 1.5px;
+			background-color: $text-dark;
+			transition: transform 0.5s;
 		}
-	}
-	&-btn-mobile-cross {
-		svg {
-			transform: translateY(1px) scale(1.1);
+		&__first {
+			margin-bottom: 6px;
+			transform-origin: 4px 3px;
+		}
+		&__second {
+			transform-origin: 4px -1px;
 		}
 	}
 	&--mobile {
-		position: absolute;
-		top: 100px;
-		left: 0;
 		display: none;
+		position: absolute;
+		top: 0;
+		left: 100vw;
 		flex-direction: column;
 		width: 100%;
 		padding: 60px 40px;
 		box-sizing: border-box;
 		background-color: $text-light;
 		z-index: 1;
+		transition: left 1s;
+		pointer-events: auto;
 		.nav-list,
 		.nav__btn-menu {
 			font-size: 32px;
@@ -109,4 +114,13 @@
 			}
 		}
 	}
+}
+.wrap-mobile { //скрывает блок, не пришлось париться с анимациями
+    position: absolute;
+    left: 0;
+	display: none;
+    width: 100%;
+	height: 100vh;
+    overflow: hidden;
+	pointer-events: none; //в childe=>auto маленькая хитрость, кликать через невидимый блок, z-index тяжко после анимации
 }
