--- a/coffee-house/style/index.scss
+++ b/coffee-house/style/index.scss
@@ -4,8 +4,20 @@
 @import "footer";
 
 .enjoy {
+	position: relative;
 	margin-top: 20px;
 	border-radius: 40px;
+	&-video {
+		position: absolute;
+		right: 50%;
+		bottom: 50%;
+		transform: translate(50%, 50%);
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+		object-fit: cover;
+		border-radius: 40px;
+	}
 	&-desc {
 		max-width: 518px;
 		margin-left: clamp(60px, 7.5vw, 101px);
@@ -267,10 +279,6 @@
 	padding: 100px 0;
 }
 .enjoy {
-	background-image: url(../img/main/hero.jpg);
-	background-size: cover;
-    background-repeat: no-repeat;
-	background-position: 50% 50%;
 	padding: 100px 0;
 }
 .about,
