--- a/coffee-house/style/index.css
+++ b/coffee-house/style/index.css
@@ -1,4 +1,8 @@
 /*Tags*/
+:root {
+  --left: 0;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -343,6 +347,9 @@ img {
   content: url(../img/header_and_footer/coffee-cup.svg);
 }
 
+.favorite-coffee {
+  position: relative;
+}
 .favorite-coffee__title {
   margin-bottom: 40px;
   font-size: 60px;
@@ -356,16 +363,20 @@ img {
   color: #B0907A;
 }
 .favorite-coffee .slider-box {
-  position: relative;
-}
-.favorite-coffee .slider {
+  overflow: hidden;
   max-width: 480px;
   margin: 0 auto;
 }
+.favorite-coffee .slider {
+  position: relative;
+  cursor: pointer;
+  user-select: none;
+}
 .favorite-coffee .slider-item {
-  display: none;
+  display: block;
   text-align: center;
   color: #403F3D;
+  width: 100%;
 }
 .favorite-coffee .slider-item__pic {
   width: 100%;
@@ -375,15 +386,22 @@ img {
   margin: 21px 0 15px;
 }
 .favorite-coffee .slider-item__price {
-  margin: 17px 0 39px;
+  margin-top: 17px;
 }
 .favorite-coffee .slider-item__type, .favorite-coffee .slider-item__price {
   font-size: 24px;
   font-weight: 600;
   line-height: 1.25;
 }
-.favorite-coffee .slider-item--active {
-  display: block;
+.favorite-coffee .slider-item:nth-child(2), .favorite-coffee .slider-item:nth-child(3) {
+  position: absolute;
+  top: 0;
+}
+.favorite-coffee .slider-item:nth-child(2) {
+  left: 100%;
+}
+.favorite-coffee .slider-item:nth-child(3) {
+  left: 200%;
 }
 .favorite-coffee .slider-controls {
   display: flex;
@@ -391,19 +409,30 @@ img {
   max-width: 144px;
   margin: 0 auto;
   list-style-type: none;
+  margin-top: 39px;
 }
 .favorite-coffee .slider-controls__item {
+  position: relative;
+  overflow: hidden;
   width: 40px;
   height: 4px;
   border-radius: 100px;
   background-color: #C1B6AD;
+  transition: background-color 0.5s;
 }
-.favorite-coffee .slider-controls__item--active {
+.favorite-coffee .slider-controls__item span {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  display: inline-block;
+  width: 40px;
+  height: 4px;
+  border-radius: 100px;
   background-color: #665F55;
 }
 .favorite-coffee .slider__btn-left, .favorite-coffee .slider__btn-right {
   position: absolute;
-  top: 290px;
+  top: 505px;
   height: 60px;
   width: 60px;
   border: 1px solid #665F55;
@@ -562,6 +591,132 @@ img {
 .about,
 .mobile-app {
   padding-bottom: 100px;
+}
+
+/*Js blocks*/
+/*Animation*/
+.stop-animation {
+  animation-play-state: paused;
+}
+
+.lefter {
+  left: 0;
+}
+
+.left,
+.right {
+  left: -100%;
+}
+
+.righter {
+  left: -200%;
+}
+
+.transition-left {
+  animation-name: move-left;
+  animation-duration: 2s;
+}
+
+.transition-lefter {
+  animation-name: move-lefter;
+  animation-duration: 2s;
+}
+
+.transition-leftery {
+  animation-name: move-leftery;
+  animation-duration: 2s;
+}
+
+.transition-right {
+  animation-name: move-right;
+  animation-duration: 2s;
+}
+
+.transition-rightery {
+  animation-name: move-rightery;
+  animation-duration: 2s;
+}
+
+.transition-righter {
+  animation-name: move-righter;
+  animation-duration: 2s;
+}
+
+@keyframes move-left {
+  from {
+    left: -200%;
+  }
+  to {
+    left: -100%;
+  }
+}
+@keyframes move-lefter {
+  from {
+    left: -200%;
+  }
+  to {
+    left: 0;
+  }
+}
+@keyframes move-leftery {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0;
+  }
+}
+@keyframes move-rightery {
+  from {
+    left: -100%;
+  }
+  to {
+    left: -200%;
+  }
+}
+@keyframes move-right {
+  from {
+    left: 0;
+  }
+  to {
+    left: -100%;
+  }
+}
+@keyframes move-righter {
+  from {
+    left: 0;
+  }
+  to {
+    left: -200%;
+  }
+}
+.progression {
+  animation-name: progress-bar;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+}
+
+.progression-back {
+  animation-name: progress-bar-back;
+  animation-duration: 1.5s;
+  animation-timing-function: linear;
+}
+
+@keyframes progress-bar {
+  from {
+    left: -100%;
+  }
+  to {
+    left: 0;
+  }
+}
+@keyframes progress-bar-back {
+  from {
+    left: var(--left);
+  }
+  to {
+    left: -100%;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
