--- a/coffee-house/style/index.scss
+++ b/coffee-house/style/index.scss
@@ -62,6 +62,7 @@
 }
 
 .favorite-coffee {
+	position: relative;
 	&__title {
 		margin-bottom: 40px;
 		font-size: 60px;
@@ -75,15 +76,19 @@
 		color: $text-accent;
 	}
 	.slider-box {
-		position: relative;
-	}
-	.slider {
+		overflow: hidden;
 		max-width: 480px;
 		margin: 0 auto;
+	}
+	.slider {
+		position: relative;
+		cursor: pointer;
+		user-select: none;
 		&-item {
-			display: none;
+			display: block;
 			text-align: center;
 			color: $text-dark;
+			width: 100%;
 			&__pic {
 				width: 100%;
 				height: 100%;
@@ -92,15 +97,23 @@
 				margin: 21px 0 15px;
 			}
 			&__price {
-				margin:17px 0 39px;
+				margin-top: 17px;
 			}
 			&__type, &__price {
 				font-size: 24px;
 				font-weight: 600;
 				line-height: 1.25;
 			}
-			&--active {
-				display: block;
+			&:nth-child(2),
+			&:nth-child(3) {
+				position: absolute;
+				top: 0;
+			}
+			&:nth-child(2) {
+				left: 100%;
+			}
+			&:nth-child(3) {
+				left: 200%;
 			}
 		}
 		&-controls {
@@ -109,12 +122,23 @@
 			max-width: 144px;
 			margin: 0 auto;
 			list-style-type: none;
+			margin-top: 39px;
 			&__item {
+				position: relative;
+				overflow: hidden;
 				width: 40px;
 				height: 4px;
 				border-radius: 100px;
 				background-color: $border-light;
-				&--active {
+				transition: background-color 0.5s;
+				span {
+					position: absolute;
+					top: 0;
+					left: -100%;
+					display: inline-block;
+					width: 40px;
+					height: 4px;
+					border-radius: 100px;
 					background-color: $border-dark;
 				}
 			}
@@ -122,7 +146,7 @@
 		&__btn-left, 
 		&__btn-right {
 			position: absolute;
-			top: 290px;
+			top: 505px;
 			height: 60px;
 			width: 60px;
 			border: 1px solid $border-dark;
@@ -284,4 +308,86 @@
 .about,
 .mobile-app {
 	padding-bottom: 100px;
+}
+
+/*Js blocks*/
+/*Animation*/
+.stop-animation {
+	animation-play-state: paused;
+}
+.lefter {
+	left: 0;
+}
+.left, 
+.right {
+	left: -100%;
+}
+.righter {
+	left: -200%;
+}
+.transition-left {
+	animation-name: move-left;
+	animation-duration: 2s;
+}
+.transition-lefter {
+	animation-name: move-lefter;
+	animation-duration: 2s;
+}
+.transition-leftery {
+	animation-name: move-leftery;
+	animation-duration: 2s;
+}
+.transition-right {
+	animation-name: move-right;
+	animation-duration: 2s;
+}
+.transition-rightery {
+	animation-name: move-rightery;
+	animation-duration: 2s;
+}
+.transition-righter {
+	animation-name: move-righter;
+	animation-duration: 2s;
+}  
+@keyframes move-left {
+	from {left: -200%;}
+	to {left: -100%;}
+}
+@keyframes move-lefter {
+	from {left: -200%;}
+	to {left: 0;}
+}
+@keyframes move-leftery {
+	from {left: -100%;}
+	to {left: 0;}
+}
+@keyframes move-rightery {
+	from {left: -100%;}
+	to {left: -200%;}
+}
+@keyframes move-right {
+	from {left: 0;}
+	to {left: -100%;}
+}
+@keyframes move-righter {
+	from {left: 0;}
+	to {left: -200%;}
+}
+.progression {
+	animation-name: progress-bar;
+	animation-duration: 5s;
+	animation-timing-function: linear;
+}
+.progression-back {
+	animation-name: progress-bar-back;
+	animation-duration: 1.5s;
+	animation-timing-function: linear;
+}
+@keyframes progress-bar {
+	from {left: -100%;}
+	to {left: 0;}
+}
+@keyframes progress-bar-back {
+	from {left: var(--left);}
+	to {left: -100%;}
 }
